# datagui

./: .clang-format  CMakeLists.txt
cmake/: dataguiConfig.cmake.in
examples/: CMakeLists.txt  canvas2.cpp  canvas2d.cpp  canvas3d.cpp  datapack.cpp  datapack_2.cpp  drop_down.cpp  example1.cpp  example2.cpp  example3.cpp  gui.cpp  gui2.cpp  gui_1.cpp  gui_2.cpp  gui_3.cpp  gui_4.cpp  gui_5.cpp  gui_6.cpp  gui_basic.cpp  gui_layers.cpp  gui_new.cpp  mesh_shader.cpp  plotter.cpp  plotter_standalone.cpp  point_cloud_shader.cpp  prop_stack.cpp  shape_3d_shader.cpp  tree.cpp  uv_mesh_shader.cpp  window.cpp
examples/canvas/: canvas2d.cpp  canvas3d.cpp
examples/datapack/: datapack.cpp  datapack_2.cpp
examples/gui/: basic.cpp  core_elements.cpp  extra_inputs.cpp  lists.cpp  popups.cpp  splits.cpp
examples/plotter/: plotter.cpp  standalone.cpp
include/: window.hpp
include/datagui/: color.hpp  element.hpp  exception.hpp  font.hpp  geometry.hpp  geometry_renderer.hpp  gui.hpp  gui_args.hpp  gui_datapack.hpp  layout.hpp  log.hpp  plot.hpp  prop_stack.hpp  props.hpp  renderer.hpp  resources.hpp  shader.hpp  style.hpp  style_old.hpp  text_renderer.hpp  theme.hpp  window.hpp
include/datagui/asset/: image.hpp  mesh.hpp  point_cloud.hpp  uv_mesh.hpp
include/datagui/datapack/: common.hpp  conversions.hpp  edit.hpp  reader.hpp  writer.hpp
include/datagui/element/: args.hpp  button.hpp  checkbox.hpp  drop_down.hpp  dropdown.hpp  element.hpp  floating.hpp  horizontal_layout.hpp  key_list.hpp  labelled.hpp  linear_layout.hpp  section.hpp  selection.hpp  series.hpp  state.hpp  system.hpp  text.hpp  text_box.hpp  text_input.hpp  tree.hpp  unique_any.hpp  vector_map.hpp  vertical_layout.hpp  window.hpp  wrapper.hpp
include/datagui/geometry/: box.hpp  camera.hpp  mat.hpp  rot.hpp  vec.hpp
include/datagui/input/: event.hpp  number_input.hpp  text_selection.hpp
include/datagui/internal/: data.hpp  element.hpp  geometry_renderer.hpp  reader.hpp  renderers.hpp  selection.hpp  shader.hpp  text.hpp  text_handler.hpp  text_renderer.hpp  text_selection.hpp  tree.hpp  vector_map.hpp
include/datagui/render/: geometry_renderer.hpp
include/datagui/system/: button.hpp  checkbox.hpp  collapsable.hpp  color_picker.hpp  dropdown.hpp  floating.hpp  group.hpp  labelled.hpp  popup.hpp  section.hpp  select.hpp  series.hpp  slider.hpp  split.hpp  system.hpp  tabs.hpp  text_box.hpp  text_input.hpp  viewport.hpp  viewport_ptr.hpp
include/datagui/system_utils/: layout.hpp
include/datagui/tree/: data.hpp  element.hpp  element_system.hpp  layout.hpp  props.hpp  state.hpp  systems.hpp  tree.hpp  unique_any.hpp  vector_map.hpp
include/datagui/types/: datapack.hpp  prop_stack.hpp  reader.hpp  vector_map.hpp
include/datagui/viewport/: canvas.hpp  canvas2.hpp  canvas2d.hpp  canvas3d.hpp  plotter.hpp  viewport.hpp
include/datagui/visual/: box_shader.hpp  color_map.hpp  font.hpp  font_manager.hpp  geometry_renderer.hpp  gui_renderer.hpp  image_shader.hpp  masked_box_shader.hpp  mesh_shader.hpp  point_cloud_shader.hpp  renderer.hpp  renderers.hpp  shader_utils.hpp  shape_2d_shader.hpp  shape_3d_shader.hpp  shape_shader.hpp  text_2d_shader.hpp  text_renderer.hpp  text_selection.hpp  text_shader.hpp  texture_shader.hpp  uv_mesh_shader.hpp  window.hpp
src/: color.cpp  element.cpp  font.cpp  geometry.cpp  geometry_renderer.cpp  gui.cpp  gui_args.cpp  gui_datapack.cpp  log.cpp  renderer.cpp  shader.cpp  text_renderer.cpp  theme.cpp  window.cpp
src/asset/: image.cpp  mesh.cpp  point_cloud.cpp  uv_mesh.cpp
src/datapack/: common.cpp  conversions.cpp  edit.cpp  reader.cpp  writer.cpp
src/element/: args.cpp  button.cpp  checkbox.cpp  drodown.cpp  drop_down.cpp  dropdown.cpp  floating.cpp  horizontal_layout.cpp  key_list.cpp  labelled.cpp  linear_layout.cpp  section.cpp  selection.cpp  series.cpp  text.cpp  text_box.cpp  text_input.cpp  tree.cpp  vertical_layout.cpp  window.cpp  wrapper.cpp
src/geometry/: box.cpp  camera.cpp  mat.cpp  rot.cpp  vec.cpp
src/input/: number_input.cpp  text_selection.cpp
src/internal/: geometry_renderer.cpp  reader.cpp  selection.cpp  shader.cpp  text.cpp  text_handler.cpp  text_renderer.cpp  text_selection.cpp  tree.cpp
src/render/: geometry_renderer.cpp  shader.cpp  text_renderer.cpp
src/system/: button.cpp  checkbox.cpp  collapsable.cpp  color_picker.cpp  dropdown.cpp  floating.cpp  group.cpp  labelled.cpp  popup.cpp  section.cpp  select.cpp  series.cpp  slider.cpp  split.cpp  tabs.cpp  text_box.cpp  text_input.cpp  viewport.cpp
src/system_utils/: layout.cpp
src/tree/: layout.cpp  tree.cpp
src/types/: datapack.cpp  reader.cpp
src/viewport/: canvas2.cpp  canvas2d.cpp  canvas3d.cpp  plotter.cpp  viewport.cpp
src/visual/: box_shader.cpp  color_map.cpp  font.cpp  font_manager.cpp  geometry_renderer.cpp  gui_renderer.cpp  image_shader.cpp  masked_box_shader.cpp  mesh_shader.cpp  point_cloud_shader.cpp  renderer.cpp  shader.cpp  shader_utils.cpp  shape_2d_shader.cpp  shape_3d_shader.cpp  shape_shader.cpp  text_2d_shader.cpp  text_renderer.cpp  text_selection.cpp  text_shader.cpp  texture_shader.cpp  uv_mesh_shader.cpp  window.cpp
test/: CMakeLists.txt  mat.cpp  rot.cpp  tree.cpp  unique_any.cpp  vec.cpp  vector_map.cpp
test/element/: tree.cpp  unique_any.cpp  vector_map.cpp
test/geometry/: mat.cpp  rot.cpp  vec.cpp
test/visual/: image_shader.cpp  masked_box_shader.cpp  mesh_shader.cpp  point_cloud_shader.cpp  shape_2d_shader.cpp  shape_3d_shader.cpp  text_2d_shader.cpp  text_shader.cpp  uv_mesh_shader.cpp  window.cpp
util/: log_terminal.cpp
